<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">


    <TextView
        android:id="@+id/AyudaTitulo"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/naranja"
        android:gravity="center"
        android:text="@string/titulo_ayuda"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/TituloCentrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/titulo_centrar"
        android:textColor="@color/tabRaya"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/AyudaTitulo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:layout_height="2dip"
        android:layout_width="wrap_content"
        android:background="@color/tabSeleccion"
        app:layout_constraintTop_toBottomOf="@+id/TituloCentrar"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/TextoCentrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TituloCentrar"
        android:text="@string/texto_centrar"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/TituloImprimir1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/tabRaya"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/TextoCentrar"
        android:text="@string/titulo_imprimir1"
        tools:ignore="MissingConstraints" />
    <View
        android:layout_height="2dip"
        android:background="@color/tabSeleccion"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/TituloImprimir1"
        android:layout_width="match_parent" />
    <TextView
        android:id="@+id/TextoImprimir1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/TituloImprimir1"
        android:text="@string/texto_imprimir1"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/TituloImprimir2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/tabRaya"
        app:layout_constraintTop_toBottomOf="@+id/TextoImprimir1"
        android:textSize="16dp"
        android:text="@string/titulo_imprimir2"
        tools:ignore="MissingConstraints" />
    <View
        android:layout_height="2dip"
        android:background="@color/tabSeleccion"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/TituloImprimir2"
        android:layout_width="match_parent" />
    <TextView
        android:id="@+id/TextoImprimir2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/texto_imprimir2"
        app:layout_constraintTop_toBottomOf="@+id/TituloImprimir2"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>