<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText">
    tools:context=".MainActivity">

    <Button
        android:id="@+id/botCargaE1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="0dp"
        android:padding="8dp"
        android:text="@string/cargar_formato_depacho"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/botImprimePack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        android:text="@string/imprimir_prueba_pack"
        app:layout_constraintTop_toBottomOf="@id/botCargaE1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/botImprimeIOMA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        android:text="@string/imprimir_prueba_ioma"
        app:layout_constraintTop_toBottomOf="@id/botImprimePack"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/botImprimeRef"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        android:text="@string/imprimir_prueba_refrigerado"
        app:layout_constraintTop_toBottomOf="@id/botImprimeIOMA"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>